--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -29,11 +29,11 @@
     <fragment
         android:id="@+id/accountFragment"
         android:name="com.samkent.proapp.AccountFragment"
-        android:label="fragment_account"
+        android:label="Accounts"
         tools:layout="@layout/fragment_account" />
     <fragment
         android:id="@+id/jobDetailsFragment"
         android:name="com.samkent.proapp.JobDetailsFragment"
-        android:label="fragment_job_details"
+        android:label="JobDetails"
         tools:layout="@layout/fragment_job_details" />
 </navigation>
